--- a/Project/DTQ_RP551CPU_WHTY0109.uvprojx
+++ b/Project/DTQ_RP551CPU_WHTY0109.uvprojx
@@ -13,16 +13,16 @@
       <pCCUsed>5060061::V5.06 update 1 (build 61)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32F103RB</Device>
+          <Device>STM32F103RC</Device>
           <Vendor>STMicroelectronics</Vendor>
           <PackID>Keil.STM32F1xx_DFP.2.1.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
-          <Cpu>IROM(0x08000000,0x20000) IRAM(0x20000000,0x5000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
+          <Cpu>IROM(0x08000000,0x40000) IRAM(0x20000000,0xC000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_128 -FS08000000 -FL020000 -FP0($$Device:STM32F103RB$Flash\STM32F10x_128.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F10x_512 -FS08000000 -FL080000 -FP0($$Device:STM32F103RC$Flash\STM32F10x_512.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:STM32F103RB$Device\Include\stm32f10x.h</RegisterFile>
+          <RegisterFile>$$Device:STM32F103RC$Device\Include\stm32f10x.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -32,7 +32,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32F103RB$SVD\STM32F103xx.svd</SFDFile>
+          <SFDFile>$$Device:STM32F103RC$SVD\STM32F103xx.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -48,7 +48,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>..\Hex\</OutputDirectory>
-          <OutputName>DTQ_RP551CPU_WHTY0109_V0206.hex</OutputName>
+          <OutputName>DTQ_RP551CPU_WHTY0109_V0300.hex</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
@@ -243,12 +243,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x5000</Size>
+                <Size>0xc000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x20000</Size>
+                <Size>0x40000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -272,8 +272,8 @@
               </OCR_RVCT3>
               <OCR_RVCT4>
                 <Type>1</Type>
-                <StartAddress>0x8000000</StartAddress>
-                <Size>0x20000</Size>
+                <StartAddress>0x8004000</StartAddress>
+                <Size>0x40000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -298,7 +298,7 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x5000</Size>
+                <Size>0xc000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -330,7 +330,7 @@
             <vShortWch>1</vShortWch>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F10X_MD, USE_STDPERIPH_DRIVER,ZL_RP551_MAIN_H</Define>
+              <Define>BRANCH_WHTY,ZL_RP551_MAIN_H</Define>
               <Undefine></Undefine>
               <IncludePath>..\Libraries\CMSIS\CM3\CoreSupport;..\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x;..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\include;..\User;..\Bsp</IncludePath>
             </VariousControls>
@@ -451,21 +451,6 @@
           <GroupName>Include</GroupName>
           <Files>
             <File>
-              <FileName>define.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\define.h</FilePath>
-            </File>
-            <File>
-              <FileName>hal_uart.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\hal_uart.h</FilePath>
-            </File>
-            <File>
-              <FileName>init.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\init.h</FilePath>
-            </File>
-            <File>
               <FileName>m24sr_cmd.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\m24sr_cmd.h</FilePath>
@@ -486,11 +471,6 @@
               <FilePath>..\include\stm32f10x_it.h</FilePath>
             </File>
             <File>
-              <FileName>variable.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\variable.h</FilePath>
-            </File>
-            <File>
               <FileName>eeprom.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\eeprom.h</FilePath>
@@ -501,29 +481,14 @@
               <FilePath>..\include\ringbuffer.h</FilePath>
             </File>
             <File>
-              <FileName>version.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\version.h</FilePath>
-            </File>
-            <File>
               <FileName>gpio.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\gpio.h</FilePath>
             </File>
             <File>
-              <FileName>nrf.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\nrf.h</FilePath>
-            </File>
-            <File>
               <FileName>whitelist.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\whitelist.h</FilePath>
-            </File>
-            <File>
-              <FileName>board.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\board.h</FilePath>
             </File>
             <File>
               <FileName>zl_rp551_main_e.h</FileName>
@@ -556,11 +521,6 @@
               <FilePath>..\Bsp\mfrc500.c</FilePath>
             </File>
             <File>
-              <FileName>nrf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Bsp\nrf.c</FilePath>
-            </File>
-            <File>
               <FileName>eeprom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Bsp\eeprom.c</FilePath>
@@ -569,11 +529,6 @@
               <FileName>gpio.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Bsp\gpio.c</FilePath>
-            </File>
-            <File>
-              <FileName>baord.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Bsp\baord.c</FilePath>
             </File>
             <File>
               <FileName>mfrc500_hw.c</FileName>
@@ -604,11 +559,6 @@
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\main.c</FilePath>
-            </File>
-            <File>
-              <FileName>app_handle_layer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\app_handle_layer.c</FilePath>
             </File>
             <File>
               <FileName>app_serial_cmd_process.c</FileName>
@@ -646,19 +596,9 @@
               <FilePath>..\User\app_timer.c</FilePath>
             </File>
             <File>
-              <FileName>init.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\init.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32f10x_it.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\stm32f10x_it.c</FilePath>
-            </File>
-            <File>
-              <FileName>variable.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\variable.c</FilePath>
             </File>
             <File>
               <FileName>ringbuffer.c</FileName>
@@ -666,14 +606,14 @@
               <FilePath>..\User\ringbuffer.c</FilePath>
             </File>
             <File>
-              <FileName>version.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\version.c</FilePath>
-            </File>
-            <File>
               <FileName>whitelist.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\whitelist.c</FilePath>
+            </File>
+            <File>
+              <FileName>board.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\board.c</FilePath>
             </File>
           </Files>
         </Group>
