--- a/Project/DTQ_RP551CPU_WHTY0109.uvprojx
+++ b/Project/DTQ_RP551CPU_WHTY0109.uvprojx
@@ -329,10 +329,10 @@
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
             <VariousControls>
-              <MiscControls></MiscControls>
+              <MiscControls>--c99</MiscControls>
               <Define>BRANCH_WHTY,ZL_RP551_MAIN_H</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Libraries\CMSIS\CM3\CoreSupport;..\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x;..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\include;..\User;..\Bsp</IncludePath>
+              <IncludePath>..\Libraries\CMSIS\CM3\CoreSupport;..\Libraries\CMSIS\CM3\DeviceSupport\ST\STM32F10x;..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\include;..\User;..\Bsp;..\User\protocol_lib</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -614,6 +614,21 @@
               <FileName>board.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\board.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Prolib</GroupName>
+          <Files>
+            <File>
+              <FileName>rf_link_protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\protocol_lib\rf_link_protocol.c</FilePath>
+            </File>
+            <File>
+              <FileName>spi_link_protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\protocol_lib\spi_link_protocol.c</FilePath>
             </File>
           </Files>
         </Group>
