ZKXL:V0300:CODE:20170821:3. 修改怎加绑定指令的JSON解析函数

--- a/Project/DTQ-STM32-ZKXL0200.uvprojx
+++ b/Project/DTQ-STM32-ZKXL0200.uvprojx
@@ -656,11 +656,6 @@
               <FilePath>..\User\app_card_process.c</FilePath>
             </File>
             <File>
-              <FileName>app_send_data_process.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\app_send_data_process.c</FilePath>
-            </File>
-            <File>
               <FileName>app_serial_cmd_process.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\app_serial_cmd_process.c</FilePath>
@@ -669,6 +664,11 @@
               <FileName>app_show_message_process.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\app_show_message_process.c</FilePath>
+            </File>
+            <File>
+              <FileName>app_rf_send_data_process.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\app_rf_send_data_process.c</FilePath>
             </File>
             <File>
               <FileName>app_spi_send_data_process.c</FileName>
@@ -731,19 +731,29 @@
               <FilePath>..\User\protocol_lib\rf_link_protocol.c</FilePath>
             </File>
             <File>
-              <FileName>spi_link_protocol.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\User\protocol_lib\spi_link_protocol.c</FilePath>
-            </File>
-            <File>
               <FileName>rf_link_protocol.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\User\protocol_lib\rf_link_protocol.h</FilePath>
             </File>
             <File>
+              <FileName>spi_link_protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\protocol_lib\spi_link_protocol.c</FilePath>
+            </File>
+            <File>
               <FileName>spi_link_protocol.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\User\protocol_lib\spi_link_protocol.h</FilePath>
+            </File>
+            <File>
+              <FileName>json_decode.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\User\protocol_lib\json_decode.h</FilePath>
+            </File>
+            <File>
+              <FileName>json_decode.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\protocol_lib\json_decode.c</FilePath>
             </File>
             <File>
               <FileName>answer_fun.c</FileName>
@@ -756,14 +766,14 @@
               <FilePath>..\User\protocol_lib\answer_fun.h</FilePath>
             </File>
             <File>
-              <FileName>json_decode.c</FileName>
+              <FileName>bind_fun.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\User\protocol_lib\json_decode.c</FilePath>
+              <FilePath>..\User\protocol_lib\bind_fun.c</FilePath>
             </File>
             <File>
-              <FileName>json_decode.h</FileName>
+              <FileName>bind_fun.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\User\protocol_lib\json_decode.h</FilePath>
+              <FilePath>..\User\protocol_lib\bind_fun.h</FilePath>
             </File>
           </Files>
         </Group>
